--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <img src="assets/images/slide2/content-mid2.png" class="content-mid" alt="Content" />
           </div>
 
-          <button id="btnNext2" class="btn-next-round" style="opacity: 0" onclick="goToPage(2)">
-            <span style="display: inline-block; transform: rotate(90deg)">➜</span>
-          </button>
+          <button id="btnNext2" class="btn-next-round" style="opacity: 0" onclick="goToPage(2)">→</button>
         </div>
       </section>
 
@@ -83,12 +81,8 @@
           </div>
 
           <div id="btnNav3" class="nav-group" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(1)">
-              <span style="display: inline-block; transform: rotate(-90deg)">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPageHorizontal(3)">
-              <span style="display: inline-block; transform: rotate(90deg)">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(1)">←</button>
+            <button class="btn-nav-small" onclick="goToPageHorizontal(3)">→</button>
           </div>
         </div>
       </section>
@@ -117,12 +111,8 @@
           </div>
 
           <div class="nav-group" id="btnNav4" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPageHorizontal(2)">
-              <span style="transform: rotate(-90deg); display: inline-block">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPage(4)">
-              <span style="transform: rotate(90deg); display: inline-block">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPageHorizontal(2)">←</button>
+            <button class="btn-nav-small" onclick="goToPage(4)">→</button>
           </div>
         </div>
       </section>
@@ -143,12 +133,8 @@
           </div>
 
           <div class="nav-group" id="btnNav5" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(3)">
-              <span style="transform: rotate(-90deg); display: inline-block">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPage(5)">
-              <span style="transform: rotate(90deg); display: inline-block">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(3)">←</button>
+            <button class="btn-nav-small" onclick="goToPage(5)">→</button>
           </div>
         </div>
       </section>
@@ -186,12 +172,8 @@
           </div>
 
           <div class="nav-group" id="btnNav6" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(4)">
-              <span style="transform: rotate(-90deg); display: inline-block">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPage(6)">
-              <span style="transform: rotate(90deg); display: inline-block">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(4)">←</button>
+            <button class="btn-nav-small" onclick="goToPage(6)">→</button>
           </div>
         </div>
       </section>
@@ -208,12 +190,8 @@
           </div>
 
           <div class="nav-group" id="btnNav7" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(5)">
-              <span style="transform: rotate(-90deg); display: inline-block">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPage(7)">
-              <span style="transform: rotate(90deg); display: inline-block">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(5)">←</button>
+            <button class="btn-nav-small" onclick="goToPage(7)">→</button>
           </div>
         </div>
       </section>
@@ -236,12 +214,8 @@
           </div>
 
           <div class="nav-group" id="btnNav8" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(6)">
-              <span style="transform: rotate(-90deg); display: inline-block">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPage(8)">
-              <span style="transform: rotate(90deg); display: inline-block">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(6)">←</button>
+            <button class="btn-nav-small" onclick="goToPage(8)">→</button>
           </div>
         </div>
       </section>
@@ -258,7 +232,15 @@
                   <p class="bank-name">Intan Nur Avivah / BCA</p>
                   <div class="account-box">
                     <span class="account-number">0502266380</span>
-                    <button class="btn-copy" onclick="copyToClipboard('0502266380')">Salin</button>
+                    <button class="btn-copy" onclick="copyToClipboard('0502266380')">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        viewBox="0 0 16 16">
+                        <path
+                          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                        <path
+                          d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                      </svg>
+                    </button>
                   </div>
                 </div>
 
@@ -266,7 +248,15 @@
                   <p class="bank-name">Imam Turmudhi / BCA</p>
                   <div class="account-box">
                     <span class="account-number">0500850451</span>
-                    <button class="btn-copy" onclick="copyToClipboard('0500850451')">Salin</button>
+                    <button class="btn-copy" onclick="copyToClipboard('0500850451')">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        viewBox="0 0 16 16">
+                        <path
+                          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                        <path
+                          d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                      </svg>
+                    </button>
                   </div>
                 </div>
               </div>
@@ -288,12 +278,8 @@
           </div>
 
           <div class="nav-group" id="btnNav9" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(7)">
-              <span style="display: inline-block; transform: rotate(-90deg)">➜</span>
-            </button>
-            <button class="btn-nav-small" onclick="goToPage(9)">
-              <span style="display: inline-block; transform: rotate(90deg)">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(7)">←</button>
+            <button class="btn-nav-small" onclick="goToPage(9)">→</button>
           </div>
         </div>
       </section>
@@ -314,9 +300,7 @@
           </div>
 
           <div class="nav-group" id="btnNav10" style="opacity: 0">
-            <button class="btn-nav-small" onclick="goToPage(8)">
-              <span style="display: inline-block; transform: rotate(-90deg)">➜</span>
-            </button>
+            <button class="btn-nav-small" onclick="goToPage(8)">←</button>
           </div>
         </div>
       </section>
@@ -426,27 +410,33 @@
           // Reset any previous horizontal classes
           page3.classList.remove('slide-to-left', 'slide-from-left');
           page4.classList.remove('slide-to-right', 'slide-from-right');
-          page3.style.transform = '';
-          page4.style.transform = '';
 
           if (targetIndex === 3) {
             // Going from slide 3 to slide 4 (left to right)
-            // Ensure we're at page 3 position
+            currentPageIndex = 3;
+
+            // Position container at slide 3
             container.style.transform = `translateY(-${2 * (100 / 9)}%)`;
 
-            // Small delay to ensure position is set
+            // Set initial positions
+            page3.style.transform = 'translateX(0)';
+            page4.style.transform = 'translateX(100%)';
+
+            // Start animation
             setTimeout(() => {
               page3.classList.add('slide-to-left');
               page4.classList.add('slide-from-right');
+              page3.style.transform = 'translateX(-100%)';
+              page4.style.transform = 'translateX(0)';
             }, 50);
 
+            // Clean up after animation
             setTimeout(() => {
               page3.classList.remove('slide-to-left');
               page4.classList.remove('slide-from-right');
               container.classList.remove('horizontal-mode');
               page3.style.transform = '';
               page4.style.transform = '';
-              currentPageIndex = 3;
               container.style.transform = `translateY(-${3 * (100 / 9)}%)`;
 
               // Trigger slide 4 animations
@@ -470,25 +460,33 @@
                   }, 400);
                 }, 400);
               }, 100);
-            }, 1250); // Match CSS transition time (1.2s + buffer)
+            }, 1050);
           } else if (targetIndex === 2) {
             // Going from slide 4 to slide 3 (right to left)
-            // Ensure we're at page 4 position
+            currentPageIndex = 2;
+
+            // Position container at slide 4
             container.style.transform = `translateY(-${3 * (100 / 9)}%)`;
 
-            // Small delay to ensure position is set
+            // Set initial positions
+            page4.style.transform = 'translateX(0)';
+            page3.style.transform = 'translateX(-100%)';
+
+            // Start animation
             setTimeout(() => {
               page4.classList.add('slide-to-right');
               page3.classList.add('slide-from-left');
+              page4.style.transform = 'translateX(100%)';
+              page3.style.transform = 'translateX(0)';
             }, 50);
 
+            // Clean up after animation
             setTimeout(() => {
               page4.classList.remove('slide-to-right');
               page3.classList.remove('slide-from-left');
               container.classList.remove('horizontal-mode');
               page3.style.transform = '';
               page4.style.transform = '';
-              currentPageIndex = 2;
               container.style.transform = `translateY(-${2 * (100 / 9)}%)`;
 
               // Trigger slide 3 animations
@@ -512,7 +510,7 @@
                   }, 400);
                 }, 400);
               }, 100);
-            }, 1250); // Match CSS transition time (1.2s + buffer)
+            }, 1050);
           }
         }
 
