fix misik di galery

--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Floating Back Button -->
-    <a href="index.html" class="btn-back-floating">KEMBALI</a>
+    <a href="index.html#page8" class="btn-back-floating">KEMBALI</a>
   </div>
 
   <script>
