--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       </section>
 
       <div id="introOverlay" class="intro-overlay">
-        <video id="introVideo" playsinline muted>
+        <video id="introVideo" playsinline muted preload="auto">
           <source src="assets/Nikah.MP4" type="video/mp4">
           Browser Anda tidak mendukung tag video.
         </video>
@@ -346,30 +346,21 @@
           const video = document.getElementById('introVideo');
           const overlay = document.getElementById('introOverlay');
 
-          // Ensure overlay is visible initially
           overlay.style.display = 'flex';
 
-          video.currentTime = 0;   // ⬅️ RESET KE DETIK 0
-          video.load();            // ⬅️ paksa reload frame awal
+          video.pause();
+          video.currentTime = 0;
+          video.load();
 
-
-          // Try to play
-          video.play().then(() => {
-            console.log("Intro video playing");
-            // LIMIT DURATION: Stop after 7 seconds (adjust as needed)
-            setTimeout(() => {
-              finishIntro();
-            }, 7000);
-          }).catch(error => {
-            console.log("Auto-play blocked", error);
-            // If blocked, just finish intro immediately so user isn't stuck on black screen
-            finishIntro();
-          });
-
-          video.onended = function () {
-            finishIntro();
+          video.oncanplaythrough = () => {
+            video.play().then(() => {
+              setTimeout(finishIntro, 7000);
+            });
           };
+
+          video.onerror = finishIntro;
         }
+
 
         function finishIntro() {
           const overlay = document.getElementById('introOverlay');
