--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       </section>
 
       <div id="introOverlay" class="intro-overlay">
-        <video id="introVideo" playsinline muted preload="auto">
+        <video id="introVideo" playsinline webkit-playsinline muted preload="metadata">
           <source src="assets/Nikah.MP4" type="video/mp4">
           Browser Anda tidak mendukung tag video.
         </video>
@@ -348,17 +348,30 @@
 
           overlay.style.display = 'flex';
 
+          // Force reset to beginning
           video.pause();
           video.currentTime = 0;
-          video.load();
 
-          video.oncanplaythrough = () => {
-            video.play().then(() => {
-              setTimeout(finishIntro, 7000);
+          // Use 'loadeddata' instead of 'canplaythrough' for faster start
+          video.addEventListener('loadeddata', function onLoaded() {
+            video.currentTime = 0; // Ensure it's at 0
+            video.play().catch(err => {
+              console.log('Video play failed:', err);
+              finishIntro();
             });
-          };
+            video.removeEventListener('loadeddata', onLoaded);
+          }, { once: true });
+
+          // Listen for video end instead of fixed timeout
+          video.addEventListener('ended', function onEnded() {
+            finishIntro();
+            video.removeEventListener('ended', onEnded);
+          }, { once: true });
 
           video.onerror = finishIntro;
+
+          // Start loading
+          video.load();
         }
 
 
