--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="The Wedding of Giofazil & Yoana" />
+  <meta property="og:title" content="The Wedding of Avivah & Imam" />
   <meta property="og:description" content="You are cordially invited to our wedding celebration." />
   <meta property="og:image" content="http://giofazil-yoana.vercel.app/assets/images/slide10/animasi.jpeg" />
   <meta property="og:url" content="http://giofazil-yoana.vercel.app" />
 
   <!-- Optional tapi disarankan -->
   <meta property="og:site_name" content="Wedding Invitation" />
-  <title>Giofazil-Yoana Wedding Invitation</title>
+  <title>Avivah-Imam Wedding Invitation</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
