--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="The Wedding of Avivah & Imam" />
   <meta property="og:description" content="You are cordially invited to our wedding celebration." />
-  <meta property="og:image" content="http://giofazil-yoana.vercel.app/assets/images/slide10/animasi.jpeg" />
-  <meta property="og:url" content="http://giofazil-yoana.vercel.app" />
+  <!-- <meta property="og:image" content="http://giofazil-yoana.vercel.app/assets/images/slide10/animasi.jpeg" />
+  <meta property="og:url" content="http://giofazil-yoana.vercel.app" /> -->
 
   <!-- Optional tapi disarankan -->
   <meta property="og:site_name" content="Wedding Invitation" />
